--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -256,7 +256,7 @@ where first use cases have been presented and discussed.
 Two working groups (WGs) that follow up on this workshop and address RDF constraint formulation and validation, are established in 2014: 
 the W3C RDF Data Shapes WG\footnote{\url{http://www.w3.org/2014/rds/charter}} and the DCMI RDF Application Profiles WG\footnote{\url{http://wiki.dublincore.org/index.php/RDF-Application-Profiles}}. 
 
-Bosch and Eckert \cite{BoschEckert2014} initiated a comprehensive database  (publicly available at \url{http://purl.org/net/RDF-validation})  on RDF validation requirements to collect case studies and use cases. It is continuously updated, and used to evaluate and compare various existing solutions for RDF constraint formulation and validation. 
+As a part of our earlier work \cite{BoschEckert2014}, we initiated a comprehensive database  (publicly available at \url{http://purl.org/net/RDF-validation})  on RDF validation requirements to collect case studies and use cases. It is continuously updated, and used to evaluate and compare various existing solutions for RDF constraint formulation and validation. 
 Also, the requirements are classified to provide a high-level view on different solutions and to facilitate a better understanding of the problem domain \cite{BoschEckert2014}.  
 
 For expressing RDF constraints, there are numerous constraint languages, each with its own syntax and semantics.  
@@ -267,43 +267,67 @@ Shape Expressions (ShEx)\footnote{\url{http://www.w3.org/Submission/shex-primer/
 Resource Shapes (ReSh)\footnote{\url{http://www.w3.org/Submission/shapes/}}, 
 and Description Set Profiles (DSP)\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}}.
 
-Their relevance vary with respect to several foremost criteria in validation process, such as user-friendliness, constraint expressivity and performance.  Regarding performance, we will refer to worst case complexity. Furthermore, the crucial service of reasoning and its usability is in question. What makes any of them a best choice, solely depends on the  particular use case. In this paper, we propose several  classifications for constraint languages as well as constraints in the light of the aforementioned criteria.
+Their relevance varies with respect to several foremost criteria in validation process, such as user-friendliness (how easy is it for a user to define constraints?), constraint expressivity (what kind of constraints can be expressed?) and performance (how efficient in terms of runtime can RDF be validated?). Furthermore, the service of reasoning and its usability is in question. 
+OWL 2 is an expressive semantic web language which is based on description logics, offering knowledge representation and reasoning services. Validation, however, does not appear to be a genuine part of it.  
+This has lead to claims that OWL 2 cannot be used for validation. 
+There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL 2 should be used for RDF validation.
+%However, OWL 2 is high-level  expressive  language with a compact human-readable syntax.
 
-\section{Motivation}
 
-The ontology web language (OWL) is an expressive semantic web language offering knowledge representation and reasoning services. Validation, however, does not appear to be a genuine part of it.  
-This has lead to claims that OWL cannot be used for validation. 
-There have been long and controversial discussions\footnote{\url{http://lists.w3.org/Archives/Public/public-data-shapes-wg/}\\ \url{https://www.jiscmail.ac.uk/cgi-bin/webadmin?A0=dc-architecture}} in the W3C and DCMI WGs if OWL should be used for RDF validation.
-However, OWL is high-level  expressive  language with a compact human-readable syntax.
-In practice, OWL is well-spread and RDFS/OWL constructs is widely used to tell people and applications about how valid instances should be created.
-RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation.
+In practice, OWL 2 is well-spread and RDFS/OWL constructs is widely used to tell people and applications about how valid instances should be created.
+RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy. Consider the following  DL knowledge base $\mathcal{K}$ :
+\begin{center}
+\begin{DL} 
+$\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasAncestor.Person}, \\
+  & \ms{Jedi $\sqsubseteq \forall$ hasWeapon. JediWeapon }\\
+  & \ms{Jedi $\sqsubseteq$ Person} \\
+ &(\ms{funct (hasAncestor)}),\\
+ &\ms{Person(Anakin)},\\
+ &\ms{Jedi(Luke)},\\
+ &\ms{hasWeapon(Luke, LaserSword)}\\
+ &\ms{hasAncestor(Luke, Anakin)},\\ 
+ &\ms{hasAncestor(Luke, Shmi)}$\}$
+\end{DL}
+\end{center}
 
-Despite the huge diversity to formulate constraints and validate them on RDF data, most of the constraint languages require a major shortcoming of redundancy. For example, consider the statement with an existential restriction \ms{Jedi $\sqsubseteq \exists$}\ms{hasJediWaepon.JediWeapon}  that says every Jedi has at least one Jedi weapon. Furthermore, we know that Luke is a Jedi (i.e., \ms{Jedi(Luke)}) having a blue laser sword (\ms{hasLaserSword(Luke, BlueLaserSword)}. 
-%Since classical constraint languages are based on the closed-world assumption (CWA) 
-%\er{"All constraint languages" has been changed to "classical" because notice that if we call OWL   a constraint language, statement does not hold.}, if a blue laser sword is not explicitly defined to be a Jedi weapon (\ms{JediWeapon(BlueLaserSword)}), the existential restriction causes a constraint violation.
-If we express the mentioned constraints in OWL %\er{\tiny \vspace{0.2cm}  But we already did in former paragraph via DL not OWL which would also confuse the reader, we can instead reformulate it here for the first time in OWL or DL,  or in former paragraph in parentheses "in DL:"}
-and apply a reasoner before the proper constraint validation is performed, we will not get a constraint violation because implicit statements like a blue laser sword is a Jedi weapon  (which corresponds to DL statement \ms{JediWeapon(BlueLaserSword)}) will be inferred. This is due to OWL's semantic basis; open-world assumption (OWA)  i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem.  However, on closer consideration, for many constraints as well as RDF validation scenarios which demands CWA, it can result inconvenience. 
+The statement \ms{Jedi $\sqsubseteq \forall$ hasWeapon. JediWeapon } says \emph{Jedis can have only Jediweapon}. Furthermore, we know that Luke is a Jedi  (i.e., \ms{Jedi(Luke)}) and \emph{Luke has the weapon laser sword} (\ms{hasWeapon(Luke, LaserSword)}.  However,  if a laser sword is not explicitly defined to be a Jedi weapon (e.g., \ms{Jediweapon(LaserSword)}), it causes a constraint violation.\er{Would there be really a violation?}
+If we express the mentioned constraints in OWL
+and apply a reasoner before the proper constraint validation is performed, we will not get a constraint violation  because implicit statements such as \emph{laser sword is a Jedi weapon} (i.e., \ms{JediWeapon(LaserSword)}) will be inferred. 
+
+
+
+Additionally, in OWL we have the non-unique name assumption (nUNA) whereas RDF validation requires that different names represent different objects (also known as unique name assumption (UNA)). This ambiguity in semantics stands as one of the main reasons of why OWL has not been adopted as a standard constraint language for RDF validation in the past.  
+OWL's semantics is based on open-world assumption (OWA)  i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem. With the OWA, in the given knowledge base above, we infer that $\ms{Anakin}$ has an ancestor that is a $\ms{Person}$ (since Anakin is a person e.g.,\ms{Person(Anakin)}), but we do not know who exactly, and $\mathcal{K}$ is consistent. 
+
+On the other hand, many RDF validation scenario requires the closed-world assumption (CWA) (i.e., a statement is inferred to be false if it cannot be proved to be true), therefore  classical constraint languages are based on CWA where  the constraint needs to be satisfied only by named individuals which yields in return of a constraint violation. This would be a shortcoming of OWA in RDF validation. We can further observe that there is a clash caused by the functional role $\ms{hasAncestor}$ and the UNA. However, in OWA there is no UNA by default, therefore the reasoning will conclude that $\ms{Anakin}$ is the same individual as \ms{Shmi} ($\ms{Anakin} \equiv \ms{Shmi}$). Notice that this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009} which is the basis for OWL 2 QL. 
+
+
+
+In this paper, taking reasoning into account, our main focus will be on constraint expressivity. We leave an analysis of user-friendliness to a further work. Nevertheless, we will mention the known complexity results of those languages through out the paper.  
+
+The rest of the paper goes as follows...
+% We take a deeper look at motivation in the next section. Then, in Section \ref{Expressivity-Complexity-OWL2}, we briefly mention the expressivity and complexity results in OWL 2 reasoning. Next, classification of RDF constraints according to reasoning and complexity follows.  In Section \ref{Classification-Constraint-Languages-Expressivity-Complexity}, we present a classification of constraint Languages concerning expressivity. In this section, we also discuss user-friendliness as an additional criteria. Furthermore, giving some examples, we present a perspective of RDF validation requirements with reasoning and without reasoning in Section 
+%\ref{sec:RDF-validation-requirements-and-reasoning} and Section 
+%\ref{RDF-Validation-Requirements-without-Reasoning}
+%respectively. Section \ref{Implementation} briefly discusses implementation aspects. Section %\ref{sec:related-Work} presents the related work. Conclusion and future work finalizes the paper.
+
+%\section{Motivation}
+
+
+
+
+
 %At a first glance, using OWL as a constraint language, the shortcoming of redundancy is solved. However, on closer consideration, OWL is by default an insufficient choice because OWL is in contrast based on the open-world assumption (OWA), i.e. a statement cannot be inferred to be false on the basis of failures to prove it. 
 %This semantics is suitable for the distributed knowledge representation scenarios on the Semantic Web, 
 %where usually the knowledge about the domain comes from distributed
 %sources and a complete knowledge about the domain cannot be assumed, 
 %but makes it difficult to use OWL for RDF validation.
-Additionally, in OWL we have the non-unique name assumption (nUNA) whereas RDF validation requires that different names represent different objects (also known as unique name assumption (UNA)). This ambiguity in semantics stands as a  one of the main reasons for it has not been adopted as a standard constraint language for RDF validation in the past.  Let us address these opposites via an example. Consider the following  DL knowledge base $\mathcal{K}$ : %\er{Notice that all around we talk about OWL but use DL. A statement somewhere before like, "it is based on DL, we will show it on DL since it has the same semantics/clarity" would be good.}
-\begin{center}
-\begin{DL} 
-$\mathcal{K}=\{$ & \ms{Person $\sqsubseteq \exists$ hasFather.Person}, \\
- &(\ms{funct (hasFather)}),\\
- &\ms{Person(Anakin)},\\
-  &\ms{Person(Luke)},\\
- &\ms{hasFather(Luke, Anakin)},\\ 
- &\ms{hasFather(Luke, Shmi)}$\}$
-\end{DL}
-\end{center}
-In case of the OWA, we infer that $\ms{Anakin}$ has a father that is a $\ms{Person}$, but we do not know who exactly, and $\mathcal{K}$ is consistent. In CWA however, the constraint needs to be satisfied only by named individuals which yields in return of a constraint violation. We can further observe that there is a clash caused by the functional role $\ms{hasAncestor}$ and the UNA. However, in OWA there is no UNA by default, therefore the reasoning will conclude that $\ms{Anakin}$ is the same individual as \ms{Shmi} ($\ms{Anakin} \equiv \ms{Shmi}$). Notice that this is not a problem if we add UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009} which is the basis for OWL 2 QL. 
+
+
 
 %\er{Notice that this is the second example already, talking again OWA CWA in detail. I think all section must be designed in a way to show UNA and OWA vs. CWA in one example. Flows better and gains space}
 
- If we follow the principle of adopting the UNA to OWL and performing constraint validation after some reasoning, the opposites of OWA in OWL and CWA in constraint validation does not affect each other, because missing assertions like in the example mentioned above will cause still some constraint violations but the implicit knowledge is even considered on constraint validation. 
+ %If we follow the principle of adopting the UNA to OWL and perform constraint validation after some reasoning, the opposites of OWA in OWL and CWA in constraint validation does not affect each other, because missing assertions like in the example mentioned above will cause still some constraint violations but the implicit knowledge is even considered on constraint validation. 
 %\er{I think that such detailed explanations or long sentences like this should not be in motivation section.}
 
 %The standard semantics of OWL is:
@@ -387,25 +411,22 @@ In case of the OWA, we infer that $\ms{Anakin}$ has a father that is a $\ms{Pers
 	%\item complete without reasoning | CW
 	%\item there is no query rewriting mechanism for OWL 2, just for OWL 2 QL
 %\end{itemize}
-In this paper, we explain why reasoning is beneficial for validation and how reasoning interacts with validation (\textbf{contribution 1}).
-We classify RDF constraints according to reasoning and complexity (\textbf{contribution 2}).
-We also investigate the expressivity of the five most promising constraint languages (\textbf{contribution 3}).
-We take OWL 2 reasoning into account as a possible pre-validation step leading to higher complexity.
-In case of reasoning, users of validation tools can define which axioms they want to use for inference rules.
-The validator is then able to determine the complexity class, to show which axioms lead to a higher complexity class, and to recommend how to get to a lower one.
-When reasoning is not needed for validation, axioms can be reformulated as constraints in queries leading to a lower complexity class. 
-Such a complexity aware validator could help people writing constraints that can be efficiently computed.
+%In this paper, we explain why reasoning is beneficial for validation and how reasoning interacts with validation (\textbf{contribution 1}).
+%We classify RDF constraints according to reasoning and complexity (\textbf{contribution 2}).
+%We also investigate the expressivity of the five most promising constraint languages (\textbf{contribution 3}).
+%We take OWL 2 reasoning into account as a possible pre-validation step leading to higher complexity.
+%In case of reasoning, users of validation tools can define which axioms they want to use for inference rules.
+%The validator is then able to determine the complexity class, to show which axioms lead to a higher complexity class, and to recommend how to get to a lower one.
+%When reasoning is not needed for validation, axioms can be reformulated as constraints in queries leading to a lower complexity class. 
+%Such a complexity aware validator could help people writing constraints that can be efficiently computed.
 %For DL, there is a web application allowing to select the needed DL constructs in order to determine the complexity of DL reasoning\footnote{\url{http://www.cs.man.ac.uk/~ezolin/dl/}}.
 
-When stating axioms and constraints (without reasoning capabilities), 
-the validator is able to determine the needed expressivity and thus can recommend constraint languages which can be used to express the wished axioms/constraints. 
-Although, there is an ordering of constraint languages for particular expressivity scores and classes, 
-validators may not recommend the constraint language with the highest expressivity as further criteria may be evaluated such as user-friendliness.
+%When stating axioms and constraints (without reasoning capabilities), 
+%the validator is able to determine the needed expressivity and thus can recommend constraint languages which can be used to express the wished axioms/constraints. 
+%Although, there is an ordering of constraint languages for particular expressivity scores and classes, 
+%validators may not recommend the constraint language with the highest expressivity as further criteria may be evaluated such as user-friendliness.
 
-The rest of the paper goes as follows. We take a deeper look at motivation in the next section. Then, in Section \ref{Expressivity-Complexity-OWL2}, we briefly mention the expressivity and complexity results in OWL 2 reasoning. Next, classification of RDF constraints according to reasoning and complexity follows.  In Section \ref{Classification-Constraint-Languages-Expressivity-Complexity}, we present a classification of constraint Languages concerning expressivity. In this section, we also discuss user-friendliness as an additional criteria. Furthermore, giving some examples, we present a perspective of RDF validation requirements with reasoning and without reasoning in Section 
-\ref{sec:RDF-validation-requirements-and-reasoning} and Section 
-\ref{RDF-Validation-Requirements-without-Reasoning}
-respectively. Section \ref{Implementation} briefly discusses implementation aspects. Section \ref{sec:related-Work} presents the related work. Conclusion and future work finalizes the paper.
+
 
 %As case studies are linked to use cases and use cases to requirements, it is known how complex the task is to fulfill use cases and case studies.
 %For specific use cases, it can also be determined which of the associated requirements lead to a higher complexity class.
