--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -657,7 +657,6 @@ There have been long and controversial discussions\footnote{\url{http://lists.w3
 In practice, OWL 2 is well-spread and RDFS/OWL constructs are widely used to tell people and applications about how valid instances should be created.
 RDF documents follow the structure of RDFS/OWL ontologies which can therefore be reused for validation. In particular, most of the constraint languages except OWL, have a major shortcoming of redundancy. \tb{explain why this reduces redundancy}
 Consider the following DL knowledge base $\mathcal{K}$\footnote{A  knowledge base is a collection of formal statements which corresponds to \emph{facts} or  \emph{what is known}.}:
-\tb{does this new example suit our needs?}
 \begin{center}
 \begin{DL} 
 $\mathcal{K}=\{$ & \ms{Book $\sqsubseteq \exists$ title.$\top$}, \ms{Book $\sqsubseteq \forall$ author.Person }\\
@@ -695,14 +694,17 @@ But if we apply a reasoner before validating, this constraint violation is resol
 OWL is based on the {\em non-unique name assumption (nUNA)} whereas RDF validation requires that different names represent different objects (a.k.a. {\em unique name assumption (UNA)}). 
 This ambiguity in semantics is one of the main reasons why OWL has not been adopted as a standard constraint language for RDF validation in the past.  
 OWL's semantics is also based on the {\em open-world assumption (OWA)}, i.e., a statement cannot be inferred to be false if it cannot be proved to be true  which fits its primary design purpose: to represent knowledge on the World Wide Web. With its open-world semantics, used as a constraint language, OWL seems to solve the redundancy problem. 
-As each book must have a title (\ms{Book $\sqsubseteq \exists$ title.$\top$}}) and as {\em Huckleberry-Finn} is a book (\ms{Book(Huckleberry-Finn)}),
+As each book must have a title (\ms{Book $\sqsubseteq \exists$ title.$\top$}) and as {\em Huckleberry-Finn} is a book (\ms{Book(Huckleberry-Finn)}),
 the book {\em Huckleberry-Finn} must have at least one title.
 In an OWA setting, this axiom does not cause a constraint violation (even if there is no explicitly defined title), since there must be a title for this book which we may not know ($\mathcal{K}$ is consistent). 
 
 On the other hand, many RDF validation scenarios require the {\em closed-world assumption (CWA)} (i.e., a statement is inferred to be false if it cannot be proved to be true).
-Hence, classical constraint languages are based on CWA where constraints need to be satisfied only by named individuals which yields in return to a constraint violation. This would be a shortcoming of OWA in RDF validation. \tb{needs further explanation}
-We can further observe that there is a clash caused by the functional property $\ms{title}$ and the UNA. \tb{explain why? surely not obvious to everybody}
-However, in OWA there is no UNA by default, therefore the reasoning will conclude that {\em The-Adventures-of-Huckleberry-Finn} is the same individual as {\em Die-Abenteuer-des-Huckleberry-Finn} (\ms{The-Adventures-of-Huckleberry-Finn $\equiv$ Die-Abenteuer-des-Huckleberry-Finn}). This is not a problem if we add the UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009} which is the basis for OWL 2 QL. 
+Hence, classical constraint languages are based on CWA where constraints need to be satisfied only by named individuals which yields in return to a constraint violation. This would be a shortcoming of OWA in RDF validation. 
+We can further observe that there is a clash caused by the functional property {\em title} (\ms{funct (title)}) and the UNA,
+since the book {\em Huckleberry-Finn} has more than one distinct titles 
+(\ms{title(Huckleberry-Finn, The-Adventures-of-Huckleberry-Finn)}, \ms{title(Huckleberry-Finn, Die-Abenteuer-des-Huckleberry-Finn)}).
+In OWA, however, there is no UNA by default, therefore reasoning will conclude that {\em The-Adventures-of-Huckleberry-Finn} is the same as {\em Die-Abenteuer-des-Huckleberry-Finn} (\ms{\{The-Adventures-of-Huckleberry-Finn\}} = \ms{\{Die-Abenteuer-des-Huckleberry-Finn\}}). 
+This is not a problem if we add the UNA to the OWA, like in the \textit{DL-Lite} family \cite{Calvanese2007,Artale2009}, which is the basis for OWL 2 QL. 
 
 \subsection{Expressivity and Complexity in OWL 2}
 
