--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -32,6 +32,8 @@
 %\usepackage{amsmath}
 \usepackage{amsmath, amssymb}
 \usepackage{mathabx}
+\usepackage{caption} 
+\captionsetup[table]{skip=10pt}
 
 % monospace within text
 \newcommand{\ms}[1]{\texttt{#1}}
@@ -175,7 +177,7 @@
 \setcounter{secnumdepth}{5}
 
 \begin{document}
-
+\renewcommand{\arraystretch}{1.3}
 %
 %
 \title{The Role of Constraint Languages and Reasoning for RDF Validation}
@@ -866,7 +868,7 @@ $C_R$ corresponds to axioms in OWL. %  e.g., subsumption, sub-properties, cardin
 %then the triple \ms{attackingByWeapon(Luke, DarthVader)} has to be stated explicitly.
 %If this triple is not stated, a constraint violation occurs.
 %If we use sub-properties with reasoning, the triple (which would cause a constraint violation) is inferred and therefore resolves the possible constraint violation.
-{\em Sub Properties}\footnote{Corresponds to {\em R-54-SUB-OBJECT-PROPERTIES}, {\em R-54-SUB-DATA-PROPERTIES}}, e.g., 
+{\em Sub Properties}\footnote{Corresponds to \emph{R-54-SUB-OBJECT-PROPERTIES~}, \emph{R-54-SUB-DATA-PROPERTIES}}~, e.g., 
 is a constraint type for which reasoning may be performed.
 For instance, if a journal volume has an {\em editor} relationship to a person, 
 then the journal volume must also have a {\em creator} relationship to the same person (\ms{editor $\sqsubseteq$ creator}).
@@ -1211,13 +1213,13 @@ Recall that, in this work we limit $C_R$ to the constraint types which can be ex
 Some of those constraint types can still be expressed in some constraint languages, which will be the focus of next section.
 %The complexity class $\mathcal{C}_R$ encompasses all \emph{constraints with reasoning} for which reasoning can be executed but cannot be expressed by OWL 2.  \er{What/Why can't  be expressed by OWL 2  while being inferred? }\tb{e.g. class-specific property ranges or class-specific reflexive object properties cannot be expressed in OWL / these 2 axioms can only be stated globally for the properties, we cannot restrict it to individuals of specific classes}
 Table \ref{tab:constraint-type-specific-complexity-classes} gives an overview of the computational complexity for RDF validation when reasoning is performed and when reasoning is not performed:
-\tb{Erman, in this table we need more spacing between the rows}
-%\begin{center}
+
+
 \begin{table}
 \centering
-%\begin{tabular}{| c | c |}
+
 \begin{tabular}{c | c}
-%\hline
+
 \textbf{Constraint Type Class}  & \textbf{Complexity Class}\\
 \hline
 $\overline{\mathcal{C}_R}$ & \textsc{Pspace}-Complete \\
@@ -1225,13 +1227,12 @@ $\overline{\mathcal{C}_R}$ & \textsc{Pspace}-Complete \\
 $\mathcal{C}_R ^{\mathcal{QL}}$ & \textsc{Ptime} \\
 \hline
 $\mathcal{C}_R ^{\mathcal{DL}}$ & \textsc{N2exptime} \\
-%\hline
+
 \end{tabular}
 \caption{Constraint Type Specific Complexity Classes}
 \label{tab:constraint-type-specific-complexity-classes}
 \end{table}
-%\end{center}
-\tb{Erman, can you reduce the space between the table caption and the following text please? and expand the space between the table and the caption?}
+
 
 What is considered by RDF validation with or without reasoning corresponds to performing SPARQL queries.  
 It is known that performing SPARQL queries is in \textsc{Pspace}-Complete \cite{Perez2009}. Since OWL 2 profiles are based on \textit{DL-Lite} family and query answering in OWL 2 QL is in \textsc{LogSpace} (or rather in AC$^0$ ) \cite{Calvanese2007}, so is the constraint validation by queries with  reasoning. Furthermore, TBox-reasoning in OWL 2 QL is in \textsc{Ptime} \cite{Calvanese2007}, hence complete query rewriting as well as combined complexity (reasoning and than querying) is in \textsc{Ptime} \cite{Artale2009,Calvanese2007}.  With the more expressive profile OWL 2 DL, reasoning is in \textsc{N2exptime} \cite{owl2profiles2008} which is a class of considerably higher complexity.
@@ -1288,8 +1289,7 @@ some constraint types in $\mathcal{C}_R$ are not only expressible by OWL 2  but 
 \end{table}
 %\end{center}
 %\tb{this is indeed a misunderstanding. I only took into account that is DSP supports 6 EXPR-C constraints and OWL 2 DL 5, then DSP is more expressive than OWL 2 DL regarding the expressivity class EXPR-C / but this is not right?}
-
-In table \ref{tab:constraint-type-specific-expressivity}, the total amount of constraint types per constraint type specific expressivity is shown by numbers in round brackets in the first column.
+In Table\ref{tab:constraint-type-specific-expressivity}, the total amount of constraint types per constraint type specific expressivity is shown by numbers in round brackets in the first column.
 Numbers in round brackets in the other columns indicate the number of constraint types which may be expressed by that particular constraint language - either by limitations, workarounds, or extensions.  
 %\er{One possible misunderstanding (maybe not) is the ordering. It is not only based on the size of the number of the constrains that they satisfies right? For instance, if there are 6 constraints (from EXPR-C) that  DSP satisfies and OWL2-DL  can satisfy lets say only 5 of them but 13 other, in such scenario OWL2 DL and DSP would be incomparable (no ordering). It is more expressive only if it contains those 6 and extras.}
 The total orderings derived from expressivity scores are:
@@ -1351,7 +1351,7 @@ If we rank them according their scores, just as before we get the following as a
 \emph{Expr(SPIN):} ReSh \prec DSP \prec OWL2QL \prec ShEx \prec OWL2DL \prec SPIN
 \end{eqnarray*}
 
-From table \ref{tab:expressivity-sores-according-to-expressivity-classes} (with numbers), one can infer that in terms of expressivity on constraint types, DSP can be fully covered by SPIN if we ignore one last constraint type (i.e., the recursive queries which is partly implemented in SPIN)\er{citation needed}. Yet another interesting message is that, none of those languages with mediocre expressivity covers the other so far. As we keep the validation requirements updated and those languages are further developed, it is likely that this list will change as well in the direction of needs of the validation community.
+From table \ref{tab:expressivity-sores-according-to-expressivity-classes} (with numbers), one can infer that in terms of expressivity on constraint types, DSP can be fully covered by SPIN if we ignore one last constraint type (i.e., the recursive queries which is partly implemented in SPIN). Yet another interesting message is that, none of those languages with mediocre expressivity covers the other so far. As we keep the validation requirements updated and those languages are further developed, it is likely that this list will change as well in the direction of needs of the validation community.
 
 %\subsection{Classification Dimension Expressivity [Old]}
 %
